--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ABSLOPE
 Type: Package
 Title: High-dimensional Model Selection with Missing Values
-Version: 0.1.0
-Date: 2019-07-10
+Version: 0.2.0
+Date: 2020-05-25
 Authors@R: person("Wei", "Jiang", email = "wei.jiang@polytechnique.edu", role = c("aut", "cre"))
 Description: Perform model selection with existence of missing values in covaraites, based on the Adaptive Bayesian SLOPE model.
 License: GPL-3
@@ -16,10 +16,5 @@ Imports:
     MASS,
     glmnet,
     missMDA,
-    stats,
-    Rcpp,
-    RcppArmadillo
+    stats
 RoxygenNote: 6.1.1
-LinkingTo: 
-    Rcpp,
-    RcppArmadillo
